--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ oauth2client = "4.1.3"
 bleach = "^6.2.0"
 channels = "^4.3.1"
 channels-redis = "^4.3.0"
+django-redis = "^5.4.0"
 redis = "^6.4.0"
 mysqlclient = "^2.2.4"
 psutil = "^7.1.3"
